[package]
authors = ["ihciah <ihciah@gmail.com>"]
description = "Yet Another Simple Bounded Pool in Rust"
edition = "2021"
keywords = ["pool"]
license = "MIT/Apache-2.0"
name = "bounded-pool"
readme = "README.md"
repository = "https://github.com/ihciah/bounded-pool"
version = "0.1.0"

[dependencies]
parking_lot = "0.12"

[features]
default = []
hardware-lock-elision = ["parking_lot/hardware-lock-elision"]
